# Perceptron

./: Linear_Regressor.ipynb  README.md  adaline.ipynb  percepton.ipynb  pyproject.toml
perceptron/Scripts/: activate  activate.bat
