[project]
name = "perceptron"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Osabutey", email = "tettehosabutey49@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy==1.26.4",
    "pandas>=2.3.1,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"